[home page] fix auditing